<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".EditNoteFragment">

        <ImageView
            android:id="@+id/iv_background_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentDescriptionBackGround" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_image_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_current_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="end"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/today" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/enter_title"
                    android:paddingLeft="@dimen/edt_title_content_padding_horizontal"
                    android:paddingRight="@dimen/edt_title_content_padding_horizontal" />


                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/enter_content"
                    android:paddingLeft="@dimen/edt_title_content_padding_horizontal"
                    android:paddingRight="@dimen/edt_title_content_padding_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_alarm"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/contentDescriptionAlarm"
                        android:padding="10dp"
                        android:src="@drawable/ic_alarm_black_24dp" />

                    <TextView
                        android:id="@+id/tv_alarm"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/iv_alarm"
                        android:text="@string/alarm"
                        android:textSize="@dimen/text_size_big" />

                    <LinearLayout
                        android:id="@+id/ll_date_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toRightOf="@id/iv_alarm"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/sp_choose_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/sp_choose_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical" />

                        <ImageView
                            android:id="@+id/bt_close_date_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/contentDescriptionDateTimeClose"
                            android:overScrollMode="never"
                            android:src="@drawable/ic_close_black_24dp" />
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

</RelativeLayout>
